# ImageOperation

./: CMakeLists.txt  main.cpp
control/action/: InImageWidgetAction.cpp  InImageWidgetAction.h  MenuFileAction.cpp  MenuFileAction.h  MenuOperationAction.cpp  MenuOperationAction.h  MenuSettingAction.cpp  MenuSettingAction.h  StitchTextureWidgetAction.cpp  StitchTextureWidgetAction.h  UnitTextureWidgetAction.cpp  UnitTextureWidgetAction.h
control/image/: ColorImageProcessing.cpp  ColorImageProcessing.h  FrequencyDomainFiltering.cpp  FrequencyDomainFiltering.h  GrayscaleTransformation.cpp  GrayscaleTransformation.h  ImageProcess.cpp  ImageProcess.h  ImageSegmentation.cpp  ImageSegmentation.h  Morphology.cpp  Morphology.h  RestorationAndReconstruction.cpp  RestorationAndReconstruction.h  WaveletAndMultiResolutionProcessing.cpp  WaveletAndMultiResolutionProcessing.h
control/image/example/: FrequencyDomainFiltering.cpp  FrequencyDomainFiltering.h  GrayscaleTransformation.cpp  GrayscaleTransformation.h  ImageSegmentation.cpp  ImageSegmentation.h  Morphology.cpp  Morphology.h  RestorationAndReconstruction.cpp  RestorationAndReconstruction.h
control/record/: FilePathRecord.cpp  FilePathRecord.h
control/util/: ImageFormatConverter.cpp  ImageFormatConverter.h  ImageMatDetailUtil.cpp  ImageMatDetailUtil.h  ImageOtherUtil.cpp  ImageOtherUtil.h
model/: ImageModel.cpp  ImageModel.h
view/slot/: MainWindow.cpp  MainWindow.h
view/source/qrc/: MainUi.qrc
view/source/ui/: MainUi.cpp  MainUi.h  MainUi.ui  ui_MainUi.h
